update url in email