@@ -93,7 +93,7 @@ public class SendMailServiceImpl implements SendMailService {
         try {
             // (1) Loading template
             Context myContext = new Context();
-            myContext.setVariable("link", "https://hktest.budibase.app/embed/trs#/getting-started/patientId=" + patientId + "&name=" + URLEncoder.encode(fullName, StandardCharsets.UTF_8));
+            myContext.setVariable("link", "https://hktest.budibase.app/embed/trs#/getting-started/patientId=" + patientId + "&name=" + URLEncoder.encode("Hello World", "UTF-8").replace("+", "%20"));
             myContext.setVariable("fullName", fullName);
 
             String htmlTemplate = templateEngine.process("welcome-patient", myContext);
